# volmarket

./: .gitignore  DEPLOY.md  README.md  SETUP.md  package-lock.json  package.json  vercel.json
api/: fund.ts
docs/: signals-spec.md  txodds-build-spec.md  volmarket-demo-script.md  volmarket-revenue-model.md  volmarket-technical-doc.md
docs-site/: architecture.mdx  deployment.mdx  docs.json  introduction.mdx  settlement.mdx  signals.mdx  txline-integration.mdx
frontend/: index.html
frontend-react/: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend-react/src/: App.tsx  DevnetProof.tsx  buffer-polyfill.ts  index.css  main.tsx  vite-env.d.ts
keeper/: .dockerignore  .env.example  .railwayignore  Dockerfile  README.md  fly.toml  package-lock.json  package.json  signal_markets.idl.json  tsconfig.json
keeper/replay/: fanout.json  odds-capture.json
keeper/scripts/: bootstrap-all.ts  bootstrap-liquidity.ts  capture-odds.ts  check-worldcup-coverage.ts  demo-claim.ts  demo-setup.ts  fund-keeper.ts  fund-test.ts  fund-wallet.ts  seed-devnet.ts  seed-live-fixtures.ts  setup-treasury.ts  two-sided-integration.ts  validate-idl.mjs  verify-board-reseed.ts  verify-keeper-claim.ts  verify-odds-proof-onchain.ts
keeper/src/: auth.ts  boardSeeder.ts  bootstrap.ts  claimer.ts  config.ts  crashGuard.ts  httpServer.ts  index.ts  keeper.ts  txline.ts  (+7 more)
mock_validator/: Cargo.toml  README.md
signal_markets/: Anchor.toml  README.md
signal_markets/programs/signal_markets/: Cargo.toml
signal_markets/programs/signal_markets/src/: lib.rs
(+48 files in other folders)
