[package]
name = "signal_markets"
version = "0.1.0"
description = "Non-custodial signal-prediction settlement engine (TxODDS World Cup)"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "signal_markets"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
